45.2. Fixed z-index bug with TodoListSearch and AreYouSurePopup

--- a/src/components/TodoList/TodoListSearch/TodoListSearch.module.scss
+++ b/src/components/TodoList/TodoListSearch/TodoListSearch.module.scss
@@ -3,6 +3,7 @@
 .search {
   margin-bottom: 30px;
   position: relative;
+  z-index: 2;
 
   &__input {
     @extend %form-input;
